Fixed text overflow. Modified sidebar width fixed height of elements to display evenly

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .container {
     text-align: center;
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 250px 4fr;
     grid-template-rows: 1fr 4fr;
     border: 1px solid black;
     height: 100vh;
@@ -186,6 +186,8 @@
     gap: 24px;
     grid-template-rows: 1fr 1fr 1fr;
     padding-top: 12px;
+    padding-bottom: 12px;
+    height: calc(100% - 30px);
   }
   .main-content .projects .projects-header .project-card {
     background-color: white;
@@ -197,7 +199,7 @@
     padding: 28px;
     box-shadow: #f0ce0e inset 8px 0px 0px 0px;
     border-radius: 10px;
-    width: 250px;
+    width: 300px;
   }
   .main-content .projects .projects-header .project-card .icons {
     display: flex;
@@ -218,9 +220,8 @@
 
   .main-content .news .announcements {
     grid-row: 1;
-    background-color: #979a9e;
     color: white;
-    gap: 24px;
+    gap: 12px;
     display: flex;
     flex-direction: column;
     flex-shrink: none;
@@ -239,42 +240,51 @@
     gap: 16px;
     display: flex;
     flex-direction: column;
-    text-overflow: ellipsis;
+    
     
   }
   .main-content .news .announcements .announcements-card .announcements-card1,
   .main-content .news .announcements .announcements-card .announcements-card2,
   .main-content .news .announcements .announcements-card .announcements-card3 {
-    max-height: 60px;
-    text-overflow: ellipsis;
-    overflow: hidden;
     gap: 4px;
     display: flex;
     flex-direction: column;
-    text-overflow: ellipsis;
-    flex: 1 1 auto;
+    align-content: top;
+    justify-content: top;
+    height: 10vh;
+    height: 78px;
+
+  }
+
+  .main-content .news .announcements .announcements-card .announcements-card1,
+  .main-content .news .announcements .announcements-card .announcements-card2 {
+    border-bottom: #caccd1 1px solid;
+    padding-bottom: 16px;
   }
 
   .main-content .news .announcements .announcements-card h3 {
     font-size: 16px;
     font-weight: bold;
     color: rgb(0, 0, 0);
-    max-height: fit-content;
   }
   .main-content .news .announcements .announcements-card p {
     font-size: 12px;
     font-weight: normal;
     color: rgb(124, 124, 124);
-    max-height: fit-content;
+    display: -webkit-box;
+    -webkit-line-clamp: 4; /* número de líneas */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 200px;
 
   }
 
   .main-content .news .trending {
-    background-color: #393f4d;
     color: white;
     grid-row: 2;
     color: white;
-    gap: 24px;
+    gap: 12px;
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
@@ -286,5 +296,5 @@
     gap: 4px;
     padding: 28px;
     border-radius: 10px;
-    height: 70%;
+    height: 100%;
   }
